Change chapter 3 structure (Create business model section)

--- a/system_analysis.tex
+++ b/system_analysis.tex
@@ -53,187 +53,6 @@
 					\item Προβολή στατιστικών για τους χρήστες του συστήματος.
 				\end{itemize}
 
-	\subsection{Gamification}
-		Το gamification (παιχνιδοποιήση) ορίζεται ως ``η ενσωμάτωση διάφορων πρακτικών και διαδικασιών παιχνιδιού σε καταστάσεις που δεν σχετίζονται με το παιχνίδι με στόχο τη λύση προβλημάτων μέσω της αύξησης της διαδραστικότητας και της συμμετοχής των χρηστών"\cite{Deterding:2011:GDE:2181037.2181040}\cite{Rojas:2013:MPG:2583008.2583033}. Ως εκ τούτου, το gamification έχει βρει χρήση σε ένα ευρύ φάσμα εφαρμογών, από τον χώρο του marketing και της εκπαίδευσης μέχρι και τον χώρο της υγείας \cite{6758978}. Το Gartner έχει εκτιμήσει ότι μέχρι το τέλος του 2015 περισσότερο από το 50\% των επιχειρήσεων θα αξιοποιεί το gamification \cite{gartnerGamification}. Στον ακαδημαϊκό χώρο συναντάμε όλο και περισσότερη έρευνα και δημοσιεύσεις με στόχο να μελετηθεί με μετρήσιμα, αντικειμενικά κριτήρια κατά πόσο είναι αποτελεσματική η χρήση των τεχνικών gamifaction. 
-
-	\subsubsection{Δομικά στοιχεία}
-	Ένα παιχνίδι αποτελείται από έξι δομικά στοιχεία, όπως παρουσιάζονται στο σχήμα \ref{fig:gamification_components}.
-		
-		\begin{figure}[h]
-		    \centering
-		    \includegraphics[width=0.7\textwidth]{gamification_components.jpg}
-		    \caption{Δομικά στοιχεία παιχνιδιών}
-		    \label{fig:gamification_components}
-		\end{figure}
-	
-		Ένας από τους βασικούς στόχους ενός συστήματος gamification αποτελεί η αύξηση της ενασχόλησης του χρήστη. Τα στάδια με τα οποία ευελπιστεί να το πετύχει έχουν ως εξής:
-		\begin{enumerate}
-			\item Κίνητρα: Στην αρχή της διαδικασίας θα πρέπει να δοθεί στον χρήστη κάποιο κίνητρο το οποίο διαφέρει ανάλογα με τον τύπο χρήστη καθώς και τους στόχους του συστήματος. Παράδειγμα ενός τέτοιου κινήτρου αποτελεί η κοινωνική αναγνώριση \cite{Gamification_on_Participation}.
-			\item Ενέργειες: είναι το δεύτερο στάδιο στο οποίο ο χρήστης οδηγείται μέσω των κινήτρων του πρώτου σταδίου. Σε αυτό το στάδιο ο χρήστης πραγματοποιεί την επιθυμητή από το σύστημα ενέργεια. Για παράδειγμα σε μια εφαρμογή εκμάθησης ξένων γλωσσών μια ενέργεια μπορεί να είναι η επανάληψη του λεξιλογίου.
-			\item Επιβραβεύσεις: Ύστερα από την επιτυχή ολοκλήρωσης της ενέργειας ή των ενεργειών στο δεύτερο βήμα ο χρήστης λαμβάνει κάποια μορφή επιβράβευσης. Παραδείγματα επιβραβεύσεων που βρίσκουν ευρεία χρήση στο gamification αποτελούν τα εικονικά νομίσματα και τα εικονικά αγαθά.
-			\item Κατορθώματα: Στο τελευταίο αυτό στάδιο ο χρήστης φτάνει σε κάποιο κατόρθωμα το οποίο ενισχύει τα κίνητρα του και ο κύκλος επαναλαμβάνεται \cite{GamificationDesign}.
-		\end{enumerate}
-		Η διαδικασία όπως την περιγράψαμε εμφανίζεται στο σχήμα \ref{fig:engagement_loop}.
-		\begin{figure}[h]
-		    \centering
-		    \includegraphics[width=0.7\textwidth]{engagement_loop.jpg}
-		    \caption{Κύκλος ενασχόλησης}
-		    \label{fig:engagement_loop}
-		\end{figure}
-
-	
-	\subsubsection{Σχεδιασμός συστήματος}	
-		Κατά τον σχεδιασμό του συστήματος gamification ακολουθήσαμε το πλαίσιο ΜΔΑ (MDA), το οποίο προέρχεται από τα αρχικά των λέξεων Μηχανισμοί (Mechanics), Δυναμικές (Dynamics) και Αισθητικά στοιχεία (Aesthetics) \cite{citeulike:382810}. Σύμφωνα με το προαναφερθέν πλαίσιο τα βασικά στοιχεία που απαρτίζουν ένα παιχνίδι είναι οι κανόνες το σύστημα και η διασκέδαση όπως φαίνεται και στο σχήμα \ref{fig:mda_1}.
-	
-		\begin{figure}[h]
-		    \centering
-		    \includegraphics[width=0.7\textwidth]{mda_1.jpg}
-		    \caption{Στοιχεία παιχνιδιού}
-		    \label{fig:mda_1}
-		\end{figure}	
-	
-		Ενώ για το κομμάτι του σχεδιασμού έχουμε το σχήμα \ref{fig:mda_2}:	
-	
-		\begin{figure}[h]
-		    \centering
-		    \includegraphics[width=0.7\textwidth]{mda_2.jpg}
-		    \caption{Πλαίσιο σχεδίασης}
-		    \label{fig:mda_2}
-		\end{figure}
-	
-		Πριν προχωρήσουμε στην ανάλυση και παρουσίαση των σχεδιαστικών αποφάσεων που πήραμε και με σκοπό να γίνουν καλύτερα κατανοητές κρίνουμε σκόπιμο να αναλύσουμε τις παραπάνω έννοιες, δεδομένου ότι αποτελεί πολύ συχνό φαινόμενο η ύπαρξη σύγχυσης μεταξύ των εννοιών μηχανισμοί και δυναμικές.
-		\begin{itemize}
-			\item \textbf{Μηχανισμοί} : περιγραφούν συγκεκριμένα δομικά στοιχεία του παιχνιδιού σε επίπεδο αναπαράστασης δεδομένων και αλγορίθμων. Συνδυάζοντας διάφορους βασικούς μηχανισμούς μπορούμε να κατασκευάσουμε πιο πολύπλοκες δομές οι οποίες μπορούν να φέρουν το επιθυμητό αποτέλεσμα. Οι μηχανισμοί είναι αυτοί που υποστηρίζουν τις δυναμικές.
-			\item \textbf{Δυναμικές} : περιγράφουν πως οι κανόνες του παιχνιδιού αλληλεπιδρούν με τον χρήστη και τους μηχανισμούς. Σε προγραμματιστική ορολογία μπορεί να περιγραφεί ως η συμπεριφορά του παιχνιδιού κατά την διάρκεια εκτέλεσης του. Ρόλος των δυναμικών είναι να κάνουν το παιχνίδι προοδευτικά δυσκολότερο αποφεύγοντας την ρουτίνα και διατηρώντας αμείωτο το ενδιαφέρων του χρήστη.
-			\item \textbf{Αισθητικά στοιχεία} :  περιγράφουν τα συναισθήματα που επιδιώκει το σύστημα να προξενήσει στον χρήστη του. Σύμφωνα με τους δημιουργούς του προτύπου MDA κάποια από αυτά είναι:
-			\begin{itemize}
-				\item Αίσθηση ( Το παιχνίδι παρουσιάζεται σαν εσωτερική ευχαρίστηση)
-				\item Φαντασία (Το παιχνίδι σαν ιστορία με σκοπό να ταξιδέψει τον παίχτη μακριά από την πραγματικότητα)
-				\item Αφήγηση (Το παιχνίδι ως ιστορία με πλοκή)
-				\item Πρόκληση (Ο παίκτης πρέπει να ξεπεράσει κάποια εμπόδια)
-				\item Συνεργασία (Το παιχνίδι με την κοινωνική του υπόσταση)
-				\item Ανακάλυψη (Το παιχνίδι με κέντρο την ανακάλυψη του καινούριου)
-				\item Έκφραση (Το παιχνίδι ως εξερεύνηση του εαυτού)
-				\item Υποβολή (Το παιχνίδι ως απλό μέσο για αναψυχή κατά τον ελέυθερο χρόνο
-	του ατόμου)
-			\end{itemize}
-		\end{itemize}
-		Κατά τον σχεδιασμό ενός συστήματος gamification, λαμβάνοντας υπόψιν τους στόχους του συστήματος γίνεται διαφορετικός συνδυασμός των παραπάνω στοιχείων. Οι πιο συχνά χρησιμοποιούμενοι μηχανισμοί είναι οι πόντοι, οι πίνακες κατάταξης καθώς και τα παράσημα. Στον πίνακα \ref{tab:gamifaction_mechanisms} βλέπουμε διάφορους μηχανισμούς καθώς και τους στόχους που θέλουν να πετύχουν \cite{raey}\cite{Lucassen2014194}.
-	
-	\begin{table}[H]
-		\begin{center}
-		    \begin{tabular}{|c|l|}
-		    \hline
-		    \rowcolor{grayy}
-		    \textbf{Στόχος} & \textbf{Μηχανισμός}
-		    \\ \hline    
-		    \multirow{12}{*}{\textbf{Ενασχόληση}} & Πίνακες Κατάταξης \\ & Επίπεδα \\ & Εικονικές επιβραβεύσεις προσπάθειας \\ & Ανταγωνισμός \\ & Αίσθηση συμμετοχής σε ομάδα \\ &  Έλεγχος σε συμπαίκτες \\ &  Διαφοροποίηση από συμπαίκτες \\ & Βοήθεια σε φίλο \\ & Χρονικοί περιορισμοί \\ & Λήξη χρόνου \\ & Περιορισμοί σε πόρους \\ \hline
-		    \multirow{3}{*}{\textbf{Αφοσίωση}}  & Περιορισμοί σε πρόσβαση \\ & Παράσημα \\ & Εικονικές επιβραβεύσεις \\ \hline
-		    \multirow{3}{*}{\textbf{Επίγνωση}}  & Προωθήσεις \\ & Λοταρίες  \\ \hline
-		    \end{tabular}
-		    \caption{Στόχοι και μηχανισμοί του Gamification}
-			\label{tab:gamifaction_mechanisms}
-		\end{center}
-	\end{table}
-
-		Για να γίνει ξεκάθαρος ο διαχωρισμός μεταξύ δυναμικών και μηχανισμών στον πίνακα \ref{tab:gamifaction_dynamics} παρουσιάζουμε τους μηχανισμούς ενός παιχνιδιού με τις αντίστοιχες δυναμικές και κίνητρα \cite{BlohmIvo2013}.
-	
-	\begin{table}[H]
-		\begin{center}
-		    \begin{tabular}{|l|l|l|}
-		    \hline
-		    \rowcolor{grayy}
-		    \textbf{Μηχανισμοί} & \textbf{Δυναμικές} & \textbf{Κίνητρα}
-		    \\ \hline
-		     Καταγραφή συμπεριφοράς & Εξερεύνηση & Περιέργεια   
-		     \\ \hline
-		     Συστήματα πόντων, εμβλήματα και επιβραβεύσεις & Συλλογή (εικονικών αγαθών) & Κατόρθωμα
-		     \\ \hline
-		     Κατάταξη, επίπεδα & Ανταγωνισμός & Κοινωνική αναγνώριση
-		     \\ \hline
-		     Ομαδικές δραστηριότητες & Συνεργασία & Επικοινωνία
-		     \\ \hline
-		     Πίεση χρόνου, χρονική περιορισμοί & Πρόκληση & Διέγερση
-		     \\ \hline
-		     Εικονικοί χαρακτήρες και κόσμοι & Ανάπτυξη, Οργάνωση & Αυτοδιάθεση
-		     \\ \hline
-		    \end{tabular}
-		    \caption{Μηχανισμοί, δυναμικές και κίνητρα στο Gamification}
-			\label{tab:gamifaction_dynamics}
-		\end{center}
-	\end{table}
-	
-	\subsubsection{Gamification στο σύστημα μας}
-		Έχοντας παρουσιάσει το θεωρητικό πλαίσιο του gamification, στην συνέχεια παρουσιάζουμε την χρήση του στο σύστημα που αναπτύξαμε στο πλαίσιο της παρούσας διπλωματικής. Μέσω του gamification επιδιώκουμε να πετύχουμε κυρίως τους δύο πρώτους στόχους της διπλωματικής όπως περιγράφηκαν στην ενότητα \ref{sec:intro_goals}.
-		
-	\subsubsection{Σύστημα επιβραβεύσεων}
-	Οι επιβραβεύσεις δίνονται στον εθελοντή (χρήστη του συστήματος) ανάλογα με την δραστηριότητα του και τους πόντους που έχει συγκεντρώσει. Οι επιβραβεύσεις μπορούν να χωριστούν σε δύο μεγάλες κατηγορίες:
-	\begin{itemize}
-		\item \textbf{Φυσικές Επιβραβεύσεις:} Ο χρήστης θα μπορεί να εξαργυρώνει τους πόντους που έχει μαζέψει για να κερδίσει υπηρεσίες ή προϊόντα από συνεργαζόμενες υπηρεσίες που τα έχουν διαθέσει τα πλαίσια κοινωνικής ευθύνης. Για παράδειγμα αν υπάρξει κάποια συνεργασία με την Cosmote μια μορφή φυσικής επιβράβευσης θα μπορούσε να είναι επιπλέον χρόνος ομιλίας.
-		 \item \textbf{Εικονικές Επιβραβεύσεις:} Η μορφή των εικονικών επιβραβεύσεων που χρησιμοποιήσαμε στο σύστημα μας είναι τα εμβλήματα, τα οποία ο χρήστης θα λαμβάνει για διάφορες δραστηριότητες που επιτελεί. Συγκεκριμένα ο χρήστης κερδίζει εμβλήματα όταν:
-		 	\begin{itemize}
-		 		\item Εγγράφεται στο σύστημα ως εθελοντής αιμοδότης
-		 		\item Πραγματοποιεί την πρώτη του αιμοδοσία
-		 		\item Συμπληρώνει τον μέγιστο αριθμό αιμοδοσιών που επιτρέπεται σε κάποιο ημερολογιακό έτος
-		 		\item Καλεί κάποιον φίλο του να χρησιμοποιήσει την εφαρμογή
-		 		\item Ανταποκρίνεται σε αιτήματα για αιμοδοσίες
-		 	\end{itemize}
-		 	Η παραπάνω λίστα είναι καθαρά ενδεικτική, δεδομένου ότι η δημιουργία εμβλημάτων αποτελεί μια δυναμική διαδικασία που έχει σκοπό να κρατήσει αμείωτο το ενδιαφέρον του εθελοντή. Για παράδειγμα ο διαχειριστής του συστήματος θα μπορεί να δημιουργεί ειδικά εμβλήματα για ένα συγκεκριμένο γεγονός αιμοδοσίας το οποίο έχει συγκεκριμένη ημερομηνία.
-	\end{itemize}
-	
-	Σε αυτό το σημείο θα πρέπει να αναφέρουμε ότι, έχει αποτελέσει αντικείμενο τεράστιας διαμάχης το κατά πόσο πρέπει να δίνονται φυσικές επιβραβεύσεις στους εθελοντές και κατά πόσο αυτό αφαιρεί το νόημα της εθελοντικής αιμοδοσίας. Στην Ελλάδα μέχρι πρωτινός δεν επιτρεπόντουσαν κίνητρα που θα μπορούσαν να θεωρηθούν αντικαταστατό του χρήματος, αλλά ο πρόσφατος νόμος 4272/2014 άρθρο 27 δίνει την ελευθερία στον Ε.ΚΕ.Α. να ορίσει τέτοιου είδους κίνητρα σε συμφωνία με την οδηγία 2002/98 της Ευρωπαϊκής ένωσης.
-	
-	\subsubsection{Σύστημα πόντων}\label{sssect:point_system}
-	Το σύστημα gamification που εφαρμόζουμε στην εφαρμογή που αναπτύχθηκε στα πλαίσια της παρούσας διπλωματικής περιλαμβάνει ολοκληρωμένο σύστημα πόντων. Ο χρήστης με το που εγγράφεται στο σύστημα λαμβάνει έναν μικρό αριθμό πόντων ως επιβράβευση της εγγραφής του ως εθελοντής αιμοδότης. Οι πόντοι μπορούν αν χωριστούν σε δύο επιμέρους κατηγορίες βάση της χρήσης τους:
-	\begin{itemize}
-		\item \textbf{Πόντοι εξαργύρωσης:} εξαργυρώνονται με σκοπό της απόκτησης κάποιας επιβράβευσης. Ανάλογα με τις δραστηριότητες που επιτελεί κερδίζει πόντους οι οποίοι αθροίζονται. Ενδεικτική λίστα για τις οποίες ο χρήστης θα μπορεί να κερδίζει πόντους:
-		\begin{itemize}
-			\item Εγγραφή στο σύστημα
-			\item Πραγματοποίηση αιμοδοσίας
-			\item Πρόσκληση φίλων στην εφαρμογή
-			\item Αλληλεπίδραση με τα κοινωνικά δίκτυα
-		\end{itemize}
-		\item \textbf{Πόντοι εμπειρίας:} ουσιαστικά είναι οι συνολικοί πόντοι που έχει αποκτήσει ο εθελοντής από την έναρξη χρήσης της εφαρμογής. Οι πόντοι εμπειρίας χρησιμοποιούνται για τον πίνακα κατάταξης μεταξύ των "φίλων" του, καθώς και για τον συνολικό πίνακα κατάταξης.
-	\end{itemize}
-	Κρίνεται σκόπιμο να αναφερθεί ότι οι πόντοι κατανέμονται με βάση την βαρύτητα της δραστηριότητας που εκτελεί ο εθελοντής αιμοδότης.
-	
-	\subsubsection{Πίνακες κατάταξης}
-	Οι πίνακες κατάταξης δείχνουν την επίδοση και την `πρόοδο' ενός χρήστη σε σχέση με αυτή των `φίλων' τους \cite{Liu:2011:GIE:2072652.2072655}. Υπάρχει ένας ενιαίος πίνακας στον οποίο και θα υπάρχουν όλοι οι εθελοντές που χρησιμοποιούν το σύστημα, εφόσον έχουν δηλώσει ότι επιθυμούν να συμμετέχουν στην κατάταξη. Ενώ υπάρχει και ένας δεύτερος πίνακας που δημιουργείται δυναμικά για κάθε χρήστη και περιλαμβάνει μόνο άτομα τα οποία ακολουθεί. Η κατάταξη διαμορφώνεται με βάση τους πόντους εμπειρίας που έχει μαζέψει κάθε χρήστης, οι οποίοι περιγράφηκαν παραπάνω. Για τους πρώτους στον κεντρικό πίνακα κατάταξης  θα υπάρχει μέριμνα για κάποια ειδική επιβράβευση, ανάλογα τις συμφωνίες και χορηγίες που υπάρχουν με εταιρείες στα πλαίσια της κοινωνικής ευθύνης.
-	
-	\subsubsection{Συμπέρασμα}
-	Συμπερασματικά το σύστημα που περιγράψαμε παραπάνω μπορεί να βοηθήσει σημαντικά στον δεύτερο στόχο που θέσαμε στην εισαγωγή της διπλωματικής, στην ενότητα \ref{sec:intro_goals}, δηλαδή στην διατήρηση και επιπλέον ενεργοποίηση των εθελοντών αιμοδοτών. Για την επίτευξη του πρώτου στόχου που θέσαμε δηλαδή την στρατολόγηση περισσότερων νέων εθελοντών θεωρούμε πως μεγάλο ρόλο μπορεί να παίξει ο συνδυασμός του gamification με τα κοινωνικά δίκτυα όπως περιγράφουμε στην επόμενη ενότητα.
-	
-	\subsection{Social Networking Integration}
-	Η θεωρία της κοινωνικοποίησης των καταναλωτών προβλέπει ότι η επικοινωνία μεταξύ των καταναλωτών επηρεάζει την γνωστική και συναισθηματική τους συμπεριφορά, καθώς και τις στάσεις τους απέναντι σε ένα προϊόν ή μια υπηρεσία\cite{1974}. Τα κοινωνικά δίκτυα μπορούν να επηρεάσουν δραστικά την συμπεριφορά ενός ατόμου\cite{shaver2007impact} και οι υπάρχοντες εθελοντές μέσω των κοινωνικών δικτύων, είναι σε θέση να παίξουν τον ρόλο του πρέσβη προσελκύοντας νέους εθελοντές αιμοδότες. Η αξιοποίηση των εθελοντών με στόχο την προαγωγή της εθελοντικής αιμοδοσίας, αποτελεί μια εξαιρετικά αποτελεσματική μέθοδο ``στρατολόγησης" και αύξησης του αριθμού των αιμοδοσιών \cite{Lemmens2008}. Πριν προχωρήσουμε στην ανάλυση των συγκεκριμένων ενεργειών που επιτελέσαμε με αυτό τον σκοπό, κρίνουμε σκόπιμο να αναφέρουμε μερικές εισαγωγικές έννοιες για τα κοινωνικά δίκτυα εν γένει. 	
-	
-	Τα μέσα κοινωνικής δικτύωσης (Social Media), μέσω των οποίων επιτυγχάνεται η ηλεκτρονική κοινωνική δικτύωση, αποτελούν ουσιαστικά απόρροια του Web 2.0, το οποίο κατάφερε να αλλάξει την υφή του διαδικτύου προσδίδοντάς του μια πιο κοινωνική διάσταση. Ο όρος κοινωνικά δίκτυα (social media), αποτελεί μια γενική έννοια που χρησιμοποιείται για να περιγράψει διαδικτυακές εφαρμογές και υπηρεσίες στις οποίες οι χρήστες έχουν την δυνατότητα να δημιουργήσουν και να μοιραστούν μεταξύ τους περιεχόμενο \cite{Kaplan201059}. Τα μέσα κοινωνικής δικτύωσης μπορούν να χωριστούν σε έξι κατηγορίες με βάση τον βαθμό της κοινωνικής παρουσίας που απαιτούν από τον χρήστη:
-	\begin{itemize}
-		\item Ιστολόγια (π.χ Blogger, Tumblr, Wordpress)
-		\item Συνεργατικές ιστοσελίδες - έργα (π.χ Wikipedia)
-		\item Ιστοσελίδες κοινωνικής δικτύωσης (π.χ Facebook)
-		\item Κοινότητες διαμοιρασμού περιεχομένου (π.χ Reddit, Youtube)
-		\item Εικονικοί κόσμοι (π.χ Second Life)
-		\item Εικονικοί κόσμοι παιχνιδιών (π.χ World of Warcraft)
-	\end{itemize}
-	
-	Τα μέσα κοινωνικής δικτύωσης βρήκαν τέτοια ευρεία αποδοχή και εδραιώθηκαν στην καθημερινότητα μας γιατί ικανοποιούν μια ισχυρή ανάγκη του ανθρώπου. Την ανάγκη του να συνεταιρίζεται, δημιουργώντας δίκτυα με άλλους ανθρώπους, ανταλλάζοντας ιδέες και απόψεις. Τα κύρια κίνητρα για τη χρήση των μέσων κοινωνικής δικτύωσης είναι τα εξής \cite{Benkler2006}:
-	\begin{itemize}
-		\item Κοινωνικοποίηση
-		\item Ψυχική ευεξία
-		\item Ατομική ικανοποίηση
-		\item Κοινωνική αναγνώριση
-	\end{itemize}		
-	
-	Όπως αναφέραμε και παραπάνω ο κύκλος της ενασχόλησης (σχήμα \ref{fig:engagement_loop}) ξεκινάει από το κίνητρο. Ένα από τα βασικότερα κίνητρα του ανθρώπου είναι η επιθυμία για κοινωνική αναγνώριση και προβολή \cite{Gamification_on_Participation} την οποία πολλές φορές επιδιώκει να ικανοποιήσει μέσω των κοινωνικών δικτύων (όπως φαίνεται από την παραπάνω λίστα).
-	
-	Ο εφαρμογή που αναπτύξαμε στα πλαίσια της διπλωματικής εργασίας δίνει την δυνατότητα στον εθελοντή (χρήστη) να μοιραστεί στα κοινωνικά δίκτυα τα επιτεύγματα του καθώς και πληροφορίες σε κάθε στάδιο της αιμοδοσίας ικανοποιώντας με αυτό τον τρόπο το αίσθημα της κοινωνικής αναγνώρισης. Συγκεκριμένα υπάρχει άμεση διασύνδεση με το facebook και το twitter στα οποία ο χρήστης ενθαρρύνεται να δημοσιεύσει στις παρακάτω περιπτώσεις:
-	\begin{itemize}
-		\item Όταν λαμβάνει ειδοποίηση για γεγονός αιμοδοσίας, του δίνεται η δυνατότητα να το μοιραστεί στα μέσα κοινωνικής δικτύωσης. Με αυτό τον τρόπο αυξάνεται η προβολή του γεγονότος αιμοδοσίας και κατ'επέκταση οι πιθανότητες να καλυφθούν οι ανάγκες σε αίμα που έχουν τεθεί, ενώ προβάλετε και η ίδια η εφαρμογή το οποίο οδηγεί στην στρατολόγηση περισσότερων εθελοντών αιμοδοτών.
-		\item Όταν ολοκληρώνει κάποια αιμοδοσία ο χρήστης παροτρύνεται να βγάλει φωτογραφία και να την μοιραστεί στα μέσα κοινωνικής δικτύωσης, προάγοντας την αιμοδοσία.
-		\item Όταν ξεκλειδώνει κάποιο έμβλημα.
-	\end{itemize}
-	
-	Επίσης ο χρήστης έχει την δυνατότητα να προσκαλέσει τους φίλους του στην εφαρμογή. Σε αυτό το σημείο πρέπει να αναφερθεί ότι κάθε φορά που ο χρήστης αλληλεπιδρά μέσω της εφαρμογής με τα μέσα κοινωνικής δικτύωσης κερδίζει πόντους σύμφωνα με το σύστημα πόντων όπως περιγράφηκε στο \ref{sssect:point_system} . Αξιοποιώντας την δύναμη των κοινωνικών δικτύων είμαστε σε θέση να δώσουμε μεγαλύτερη προβολή και κοινωνικό χαρακτήρα στην εθελοντική αιμοδοσία. Μετατρέποντας ουσιαστικά τους εθελοντές αιμοδότες σε πρότυπα της εθελοντικής αιμοδοσίας με στόχο την προσέλκυση νέων εθελοντών αιμοδοτών.
 	
 \section{UML diagrams - Σενάρια χρήσης  }
 	Η διαδικασία της μοντελοποίησης, δηλαδή ο αναλυτικός σχεδιασμός ενός συστήματος, πριν από την υλοποίηση του είναι ένα πολύ βασικό στάδιο κατά την ανάπτυξη εφαρμογών. Ένα σύστημα μοντελοποιείται επιτυχώς όταν οι λειτουργικότητες του συστήματος έχουν περιγραφεί πλήρως και ορθώς, έχουν καλυφθεί οι ανάγκες των τελικών χρηστών και υποστηρίζεται η επεκτασιμότητα του συστήματος. 
@@ -1308,5 +1127,186 @@
 \end{table}
 
 
-\section{Ανάλυση απαιτήσεων (web, mobile)}
-\section{Σχεδιασμός και αρχιτεκτονική της εφαρμογής (web, mobile)}
+\section{Business Model}
+	\subsection{Gamification}
+		Το gamification (παιχνιδοποιήση) ορίζεται ως ``η ενσωμάτωση διάφορων πρακτικών και διαδικασιών παιχνιδιού σε καταστάσεις που δεν σχετίζονται με το παιχνίδι με στόχο τη λύση προβλημάτων μέσω της αύξησης της διαδραστικότητας και της συμμετοχής των χρηστών"\cite{Deterding:2011:GDE:2181037.2181040}\cite{Rojas:2013:MPG:2583008.2583033}. Ως εκ τούτου, το gamification έχει βρει χρήση σε ένα ευρύ φάσμα εφαρμογών, από τον χώρο του marketing και της εκπαίδευσης μέχρι και τον χώρο της υγείας \cite{6758978}. Το Gartner έχει εκτιμήσει ότι μέχρι το τέλος του 2015 περισσότερο από το 50\% των επιχειρήσεων θα αξιοποιεί το gamification \cite{gartnerGamification}. Στον ακαδημαϊκό χώρο συναντάμε όλο και περισσότερη έρευνα και δημοσιεύσεις με στόχο να μελετηθεί με μετρήσιμα, αντικειμενικά κριτήρια κατά πόσο είναι αποτελεσματική η χρήση των τεχνικών gamifaction. 
+
+	\subsubsection{Δομικά στοιχεία}
+	Ένα παιχνίδι αποτελείται από έξι δομικά στοιχεία, όπως παρουσιάζονται στο σχήμα \ref{fig:gamification_components}.
+		
+		\begin{figure}[h]
+		    \centering
+		    \includegraphics[width=0.7\textwidth]{gamification_components.jpg}
+		    \caption{Δομικά στοιχεία παιχνιδιών}
+		    \label{fig:gamification_components}
+		\end{figure}
+	
+		Ένας από τους βασικούς στόχους ενός συστήματος gamification αποτελεί η αύξηση της ενασχόλησης του χρήστη. Τα στάδια με τα οποία ευελπιστεί να το πετύχει έχουν ως εξής:
+		\begin{enumerate}
+			\item Κίνητρα: Στην αρχή της διαδικασίας θα πρέπει να δοθεί στον χρήστη κάποιο κίνητρο το οποίο διαφέρει ανάλογα με τον τύπο χρήστη καθώς και τους στόχους του συστήματος. Παράδειγμα ενός τέτοιου κινήτρου αποτελεί η κοινωνική αναγνώριση \cite{Gamification_on_Participation}.
+			\item Ενέργειες: είναι το δεύτερο στάδιο στο οποίο ο χρήστης οδηγείται μέσω των κινήτρων του πρώτου σταδίου. Σε αυτό το στάδιο ο χρήστης πραγματοποιεί την επιθυμητή από το σύστημα ενέργεια. Για παράδειγμα σε μια εφαρμογή εκμάθησης ξένων γλωσσών μια ενέργεια μπορεί να είναι η επανάληψη του λεξιλογίου.
+			\item Επιβραβεύσεις: Ύστερα από την επιτυχή ολοκλήρωσης της ενέργειας ή των ενεργειών στο δεύτερο βήμα ο χρήστης λαμβάνει κάποια μορφή επιβράβευσης. Παραδείγματα επιβραβεύσεων που βρίσκουν ευρεία χρήση στο gamification αποτελούν τα εικονικά νομίσματα και τα εικονικά αγαθά.
+			\item Κατορθώματα: Στο τελευταίο αυτό στάδιο ο χρήστης φτάνει σε κάποιο κατόρθωμα το οποίο ενισχύει τα κίνητρα του και ο κύκλος επαναλαμβάνεται \cite{GamificationDesign}.
+		\end{enumerate}
+		Η διαδικασία όπως την περιγράψαμε εμφανίζεται στο σχήμα \ref{fig:engagement_loop}.
+		\begin{figure}[h]
+		    \centering
+		    \includegraphics[width=0.7\textwidth]{engagement_loop.jpg}
+		    \caption{Κύκλος ενασχόλησης}
+		    \label{fig:engagement_loop}
+		\end{figure}
+
+	
+	\subsubsection{Σχεδιασμός συστήματος}	
+		Κατά τον σχεδιασμό του συστήματος gamification ακολουθήσαμε το πλαίσιο ΜΔΑ (MDA), το οποίο προέρχεται από τα αρχικά των λέξεων Μηχανισμοί (Mechanics), Δυναμικές (Dynamics) και Αισθητικά στοιχεία (Aesthetics) \cite{citeulike:382810}. Σύμφωνα με το προαναφερθέν πλαίσιο τα βασικά στοιχεία που απαρτίζουν ένα παιχνίδι είναι οι κανόνες το σύστημα και η διασκέδαση όπως φαίνεται και στο σχήμα \ref{fig:mda_1}.
+	
+		\begin{figure}[h]
+		    \centering
+		    \includegraphics[width=0.7\textwidth]{mda_1.jpg}
+		    \caption{Στοιχεία παιχνιδιού}
+		    \label{fig:mda_1}
+		\end{figure}	
+	
+		Ενώ για το κομμάτι του σχεδιασμού έχουμε το σχήμα \ref{fig:mda_2}:	
+	
+		\begin{figure}[h]
+		    \centering
+		    \includegraphics[width=0.7\textwidth]{mda_2.jpg}
+		    \caption{Πλαίσιο σχεδίασης}
+		    \label{fig:mda_2}
+		\end{figure}
+	
+		Πριν προχωρήσουμε στην ανάλυση και παρουσίαση των σχεδιαστικών αποφάσεων που πήραμε και με σκοπό να γίνουν καλύτερα κατανοητές κρίνουμε σκόπιμο να αναλύσουμε τις παραπάνω έννοιες, δεδομένου ότι αποτελεί πολύ συχνό φαινόμενο η ύπαρξη σύγχυσης μεταξύ των εννοιών μηχανισμοί και δυναμικές.
+		\begin{itemize}
+			\item \textbf{Μηχανισμοί} : περιγραφούν συγκεκριμένα δομικά στοιχεία του παιχνιδιού σε επίπεδο αναπαράστασης δεδομένων και αλγορίθμων. Συνδυάζοντας διάφορους βασικούς μηχανισμούς μπορούμε να κατασκευάσουμε πιο πολύπλοκες δομές οι οποίες μπορούν να φέρουν το επιθυμητό αποτέλεσμα. Οι μηχανισμοί είναι αυτοί που υποστηρίζουν τις δυναμικές.
+			\item \textbf{Δυναμικές} : περιγράφουν πως οι κανόνες του παιχνιδιού αλληλεπιδρούν με τον χρήστη και τους μηχανισμούς. Σε προγραμματιστική ορολογία μπορεί να περιγραφεί ως η συμπεριφορά του παιχνιδιού κατά την διάρκεια εκτέλεσης του. Ρόλος των δυναμικών είναι να κάνουν το παιχνίδι προοδευτικά δυσκολότερο αποφεύγοντας την ρουτίνα και διατηρώντας αμείωτο το ενδιαφέρων του χρήστη.
+			\item \textbf{Αισθητικά στοιχεία} :  περιγράφουν τα συναισθήματα που επιδιώκει το σύστημα να προξενήσει στον χρήστη του. Σύμφωνα με τους δημιουργούς του προτύπου MDA κάποια από αυτά είναι:
+			\begin{itemize}
+				\item Αίσθηση ( Το παιχνίδι παρουσιάζεται σαν εσωτερική ευχαρίστηση)
+				\item Φαντασία (Το παιχνίδι σαν ιστορία με σκοπό να ταξιδέψει τον παίχτη μακριά από την πραγματικότητα)
+				\item Αφήγηση (Το παιχνίδι ως ιστορία με πλοκή)
+				\item Πρόκληση (Ο παίκτης πρέπει να ξεπεράσει κάποια εμπόδια)
+				\item Συνεργασία (Το παιχνίδι με την κοινωνική του υπόσταση)
+				\item Ανακάλυψη (Το παιχνίδι με κέντρο την ανακάλυψη του καινούριου)
+				\item Έκφραση (Το παιχνίδι ως εξερεύνηση του εαυτού)
+				\item Υποβολή (Το παιχνίδι ως απλό μέσο για αναψυχή κατά τον ελέυθερο χρόνο
+	του ατόμου)
+			\end{itemize}
+		\end{itemize}
+		Κατά τον σχεδιασμό ενός συστήματος gamification, λαμβάνοντας υπόψιν τους στόχους του συστήματος γίνεται διαφορετικός συνδυασμός των παραπάνω στοιχείων. Οι πιο συχνά χρησιμοποιούμενοι μηχανισμοί είναι οι πόντοι, οι πίνακες κατάταξης καθώς και τα παράσημα. Στον πίνακα \ref{tab:gamifaction_mechanisms} βλέπουμε διάφορους μηχανισμούς καθώς και τους στόχους που θέλουν να πετύχουν \cite{raey}\cite{Lucassen2014194}.
+	
+	\begin{table}[H]
+		\begin{center}
+		    \begin{tabular}{|c|l|}
+		    \hline
+		    \rowcolor{grayy}
+		    \textbf{Στόχος} & \textbf{Μηχανισμός}
+		    \\ \hline    
+		    \multirow{12}{*}{\textbf{Ενασχόληση}} & Πίνακες Κατάταξης \\ & Επίπεδα \\ & Εικονικές επιβραβεύσεις προσπάθειας \\ & Ανταγωνισμός \\ & Αίσθηση συμμετοχής σε ομάδα \\ &  Έλεγχος σε συμπαίκτες \\ &  Διαφοροποίηση από συμπαίκτες \\ & Βοήθεια σε φίλο \\ & Χρονικοί περιορισμοί \\ & Λήξη χρόνου \\ & Περιορισμοί σε πόρους \\ \hline
+		    \multirow{3}{*}{\textbf{Αφοσίωση}}  & Περιορισμοί σε πρόσβαση \\ & Παράσημα \\ & Εικονικές επιβραβεύσεις \\ \hline
+		    \multirow{3}{*}{\textbf{Επίγνωση}}  & Προωθήσεις \\ & Λοταρίες  \\ \hline
+		    \end{tabular}
+		    \caption{Στόχοι και μηχανισμοί του Gamification}
+			\label{tab:gamifaction_mechanisms}
+		\end{center}
+	\end{table}
+
+		Για να γίνει ξεκάθαρος ο διαχωρισμός μεταξύ δυναμικών και μηχανισμών στον πίνακα \ref{tab:gamifaction_dynamics} παρουσιάζουμε τους μηχανισμούς ενός παιχνιδιού με τις αντίστοιχες δυναμικές και κίνητρα \cite{BlohmIvo2013}.
+	
+	\begin{table}[H]
+		\begin{center}
+		    \begin{tabular}{|l|l|l|}
+		    \hline
+		    \rowcolor{grayy}
+		    \textbf{Μηχανισμοί} & \textbf{Δυναμικές} & \textbf{Κίνητρα}
+		    \\ \hline
+		     Καταγραφή συμπεριφοράς & Εξερεύνηση & Περιέργεια   
+		     \\ \hline
+		     Συστήματα πόντων, εμβλήματα και επιβραβεύσεις & Συλλογή (εικονικών αγαθών) & Κατόρθωμα
+		     \\ \hline
+		     Κατάταξη, επίπεδα & Ανταγωνισμός & Κοινωνική αναγνώριση
+		     \\ \hline
+		     Ομαδικές δραστηριότητες & Συνεργασία & Επικοινωνία
+		     \\ \hline
+		     Πίεση χρόνου, χρονική περιορισμοί & Πρόκληση & Διέγερση
+		     \\ \hline
+		     Εικονικοί χαρακτήρες και κόσμοι & Ανάπτυξη, Οργάνωση & Αυτοδιάθεση
+		     \\ \hline
+		    \end{tabular}
+		    \caption{Μηχανισμοί, δυναμικές και κίνητρα στο Gamification}
+			\label{tab:gamifaction_dynamics}
+		\end{center}
+	\end{table}
+	
+	\subsubsection{Gamification στο σύστημα μας}
+		Έχοντας παρουσιάσει το θεωρητικό πλαίσιο του gamification, στην συνέχεια παρουσιάζουμε την χρήση του στο σύστημα που αναπτύξαμε στο πλαίσιο της παρούσας διπλωματικής. Μέσω του gamification επιδιώκουμε να πετύχουμε κυρίως τους δύο πρώτους στόχους της διπλωματικής όπως περιγράφηκαν στην ενότητα \ref{sec:intro_goals}.
+		
+	\subsubsection{Σύστημα επιβραβεύσεων}
+	Οι επιβραβεύσεις δίνονται στον εθελοντή (χρήστη του συστήματος) ανάλογα με την δραστηριότητα του και τους πόντους που έχει συγκεντρώσει. Οι επιβραβεύσεις μπορούν να χωριστούν σε δύο μεγάλες κατηγορίες:
+	\begin{itemize}
+		\item \textbf{Φυσικές Επιβραβεύσεις:} Ο χρήστης θα μπορεί να εξαργυρώνει τους πόντους που έχει μαζέψει για να κερδίσει υπηρεσίες ή προϊόντα από συνεργαζόμενες υπηρεσίες που τα έχουν διαθέσει τα πλαίσια κοινωνικής ευθύνης. Για παράδειγμα αν υπάρξει κάποια συνεργασία με την Cosmote μια μορφή φυσικής επιβράβευσης θα μπορούσε να είναι επιπλέον χρόνος ομιλίας.
+		 \item \textbf{Εικονικές Επιβραβεύσεις:} Η μορφή των εικονικών επιβραβεύσεων που χρησιμοποιήσαμε στο σύστημα μας είναι τα εμβλήματα, τα οποία ο χρήστης θα λαμβάνει για διάφορες δραστηριότητες που επιτελεί. Συγκεκριμένα ο χρήστης κερδίζει εμβλήματα όταν:
+		 	\begin{itemize}
+		 		\item Εγγράφεται στο σύστημα ως εθελοντής αιμοδότης
+		 		\item Πραγματοποιεί την πρώτη του αιμοδοσία
+		 		\item Συμπληρώνει τον μέγιστο αριθμό αιμοδοσιών που επιτρέπεται σε κάποιο ημερολογιακό έτος
+		 		\item Καλεί κάποιον φίλο του να χρησιμοποιήσει την εφαρμογή
+		 		\item Ανταποκρίνεται σε αιτήματα για αιμοδοσίες
+		 	\end{itemize}
+		 	Η παραπάνω λίστα είναι καθαρά ενδεικτική, δεδομένου ότι η δημιουργία εμβλημάτων αποτελεί μια δυναμική διαδικασία που έχει σκοπό να κρατήσει αμείωτο το ενδιαφέρον του εθελοντή. Για παράδειγμα ο διαχειριστής του συστήματος θα μπορεί να δημιουργεί ειδικά εμβλήματα για ένα συγκεκριμένο γεγονός αιμοδοσίας το οποίο έχει συγκεκριμένη ημερομηνία.
+	\end{itemize}
+	
+	Σε αυτό το σημείο θα πρέπει να αναφέρουμε ότι, έχει αποτελέσει αντικείμενο τεράστιας διαμάχης το κατά πόσο πρέπει να δίνονται φυσικές επιβραβεύσεις στους εθελοντές και κατά πόσο αυτό αφαιρεί το νόημα της εθελοντικής αιμοδοσίας. Στην Ελλάδα μέχρι πρωτινός δεν επιτρεπόντουσαν κίνητρα που θα μπορούσαν να θεωρηθούν αντικαταστατό του χρήματος, αλλά ο πρόσφατος νόμος 4272/2014 άρθρο 27 δίνει την ελευθερία στον Ε.ΚΕ.Α. να ορίσει τέτοιου είδους κίνητρα σε συμφωνία με την οδηγία 2002/98 της Ευρωπαϊκής ένωσης.
+	
+	\subsubsection{Σύστημα πόντων}\label{sssect:point_system}
+	Το σύστημα gamification που εφαρμόζουμε στην εφαρμογή που αναπτύχθηκε στα πλαίσια της παρούσας διπλωματικής περιλαμβάνει ολοκληρωμένο σύστημα πόντων. Ο χρήστης με το που εγγράφεται στο σύστημα λαμβάνει έναν μικρό αριθμό πόντων ως επιβράβευση της εγγραφής του ως εθελοντής αιμοδότης. Οι πόντοι μπορούν αν χωριστούν σε δύο επιμέρους κατηγορίες βάση της χρήσης τους:
+	\begin{itemize}
+		\item \textbf{Πόντοι εξαργύρωσης:} εξαργυρώνονται με σκοπό της απόκτησης κάποιας επιβράβευσης. Ανάλογα με τις δραστηριότητες που επιτελεί κερδίζει πόντους οι οποίοι αθροίζονται. Ενδεικτική λίστα για τις οποίες ο χρήστης θα μπορεί να κερδίζει πόντους:
+		\begin{itemize}
+			\item Εγγραφή στο σύστημα
+			\item Πραγματοποίηση αιμοδοσίας
+			\item Πρόσκληση φίλων στην εφαρμογή
+			\item Αλληλεπίδραση με τα κοινωνικά δίκτυα
+		\end{itemize}
+		\item \textbf{Πόντοι εμπειρίας:} ουσιαστικά είναι οι συνολικοί πόντοι που έχει αποκτήσει ο εθελοντής από την έναρξη χρήσης της εφαρμογής. Οι πόντοι εμπειρίας χρησιμοποιούνται για τον πίνακα κατάταξης μεταξύ των "φίλων" του, καθώς και για τον συνολικό πίνακα κατάταξης.
+	\end{itemize}
+	Κρίνεται σκόπιμο να αναφερθεί ότι οι πόντοι κατανέμονται με βάση την βαρύτητα της δραστηριότητας που εκτελεί ο εθελοντής αιμοδότης.
+	
+	\subsubsection{Πίνακες κατάταξης}
+	Οι πίνακες κατάταξης δείχνουν την επίδοση και την `πρόοδο' ενός χρήστη σε σχέση με αυτή των `φίλων' τους \cite{Liu:2011:GIE:2072652.2072655}. Υπάρχει ένας ενιαίος πίνακας στον οποίο και θα υπάρχουν όλοι οι εθελοντές που χρησιμοποιούν το σύστημα, εφόσον έχουν δηλώσει ότι επιθυμούν να συμμετέχουν στην κατάταξη. Ενώ υπάρχει και ένας δεύτερος πίνακας που δημιουργείται δυναμικά για κάθε χρήστη και περιλαμβάνει μόνο άτομα τα οποία ακολουθεί. Η κατάταξη διαμορφώνεται με βάση τους πόντους εμπειρίας που έχει μαζέψει κάθε χρήστης, οι οποίοι περιγράφηκαν παραπάνω. Για τους πρώτους στον κεντρικό πίνακα κατάταξης  θα υπάρχει μέριμνα για κάποια ειδική επιβράβευση, ανάλογα τις συμφωνίες και χορηγίες που υπάρχουν με εταιρείες στα πλαίσια της κοινωνικής ευθύνης.
+	
+	\subsubsection{Συμπέρασμα}
+	Συμπερασματικά το σύστημα που περιγράψαμε παραπάνω μπορεί να βοηθήσει σημαντικά στον δεύτερο στόχο που θέσαμε στην εισαγωγή της διπλωματικής, στην ενότητα \ref{sec:intro_goals}, δηλαδή στην διατήρηση και επιπλέον ενεργοποίηση των εθελοντών αιμοδοτών. Για την επίτευξη του πρώτου στόχου που θέσαμε δηλαδή την στρατολόγηση περισσότερων νέων εθελοντών θεωρούμε πως μεγάλο ρόλο μπορεί να παίξει ο συνδυασμός του gamification με τα κοινωνικά δίκτυα όπως περιγράφουμε στην επόμενη ενότητα.
+	
+	\subsection{Social Networking Integration}
+	Η θεωρία της κοινωνικοποίησης των καταναλωτών προβλέπει ότι η επικοινωνία μεταξύ των καταναλωτών επηρεάζει την γνωστική και συναισθηματική τους συμπεριφορά, καθώς και τις στάσεις τους απέναντι σε ένα προϊόν ή μια υπηρεσία\cite{1974}. Τα κοινωνικά δίκτυα μπορούν να επηρεάσουν δραστικά την συμπεριφορά ενός ατόμου\cite{shaver2007impact} και οι υπάρχοντες εθελοντές μέσω των κοινωνικών δικτύων, είναι σε θέση να παίξουν τον ρόλο του πρέσβη προσελκύοντας νέους εθελοντές αιμοδότες. Η αξιοποίηση των εθελοντών με στόχο την προαγωγή της εθελοντικής αιμοδοσίας, αποτελεί μια εξαιρετικά αποτελεσματική μέθοδο ``στρατολόγησης" και αύξησης του αριθμού των αιμοδοσιών \cite{Lemmens2008}. Πριν προχωρήσουμε στην ανάλυση των συγκεκριμένων ενεργειών που επιτελέσαμε με αυτό τον σκοπό, κρίνουμε σκόπιμο να αναφέρουμε μερικές εισαγωγικές έννοιες για τα κοινωνικά δίκτυα εν γένει. 	
+	
+	Τα μέσα κοινωνικής δικτύωσης (Social Media), μέσω των οποίων επιτυγχάνεται η ηλεκτρονική κοινωνική δικτύωση, αποτελούν ουσιαστικά απόρροια του Web 2.0, το οποίο κατάφερε να αλλάξει την υφή του διαδικτύου προσδίδοντάς του μια πιο κοινωνική διάσταση. Ο όρος κοινωνικά δίκτυα (social media), αποτελεί μια γενική έννοια που χρησιμοποιείται για να περιγράψει διαδικτυακές εφαρμογές και υπηρεσίες στις οποίες οι χρήστες έχουν την δυνατότητα να δημιουργήσουν και να μοιραστούν μεταξύ τους περιεχόμενο \cite{Kaplan201059}. Τα μέσα κοινωνικής δικτύωσης μπορούν να χωριστούν σε έξι κατηγορίες με βάση τον βαθμό της κοινωνικής παρουσίας που απαιτούν από τον χρήστη:
+	\begin{itemize}
+		\item Ιστολόγια (π.χ Blogger, Tumblr, Wordpress)
+		\item Συνεργατικές ιστοσελίδες - έργα (π.χ Wikipedia)
+		\item Ιστοσελίδες κοινωνικής δικτύωσης (π.χ Facebook)
+		\item Κοινότητες διαμοιρασμού περιεχομένου (π.χ Reddit, Youtube)
+		\item Εικονικοί κόσμοι (π.χ Second Life)
+		\item Εικονικοί κόσμοι παιχνιδιών (π.χ World of Warcraft)
+	\end{itemize}
+	
+	Τα μέσα κοινωνικής δικτύωσης βρήκαν τέτοια ευρεία αποδοχή και εδραιώθηκαν στην καθημερινότητα μας γιατί ικανοποιούν μια ισχυρή ανάγκη του ανθρώπου. Την ανάγκη του να συνεταιρίζεται, δημιουργώντας δίκτυα με άλλους ανθρώπους, ανταλλάζοντας ιδέες και απόψεις. Τα κύρια κίνητρα για τη χρήση των μέσων κοινωνικής δικτύωσης είναι τα εξής \cite{Benkler2006}:
+	\begin{itemize}
+		\item Κοινωνικοποίηση
+		\item Ψυχική ευεξία
+		\item Ατομική ικανοποίηση
+		\item Κοινωνική αναγνώριση
+	\end{itemize}		
+	
+	Όπως αναφέραμε και παραπάνω ο κύκλος της ενασχόλησης (σχήμα \ref{fig:engagement_loop}) ξεκινάει από το κίνητρο. Ένα από τα βασικότερα κίνητρα του ανθρώπου είναι η επιθυμία για κοινωνική αναγνώριση και προβολή \cite{Gamification_on_Participation} την οποία πολλές φορές επιδιώκει να ικανοποιήσει μέσω των κοινωνικών δικτύων (όπως φαίνεται από την παραπάνω λίστα).
+	
+	Ο εφαρμογή που αναπτύξαμε στα πλαίσια της διπλωματικής εργασίας δίνει την δυνατότητα στον εθελοντή (χρήστη) να μοιραστεί στα κοινωνικά δίκτυα τα επιτεύγματα του καθώς και πληροφορίες σε κάθε στάδιο της αιμοδοσίας ικανοποιώντας με αυτό τον τρόπο το αίσθημα της κοινωνικής αναγνώρισης. Συγκεκριμένα υπάρχει άμεση διασύνδεση με το facebook και το twitter στα οποία ο χρήστης ενθαρρύνεται να δημοσιεύσει στις παρακάτω περιπτώσεις:
+	\begin{itemize}
+		\item Όταν λαμβάνει ειδοποίηση για γεγονός αιμοδοσίας, του δίνεται η δυνατότητα να το μοιραστεί στα μέσα κοινωνικής δικτύωσης. Με αυτό τον τρόπο αυξάνεται η προβολή του γεγονότος αιμοδοσίας και κατ'επέκταση οι πιθανότητες να καλυφθούν οι ανάγκες σε αίμα που έχουν τεθεί, ενώ προβάλετε και η ίδια η εφαρμογή το οποίο οδηγεί στην στρατολόγηση περισσότερων εθελοντών αιμοδοτών.
+		\item Όταν ολοκληρώνει κάποια αιμοδοσία ο χρήστης παροτρύνεται να βγάλει φωτογραφία και να την μοιραστεί στα μέσα κοινωνικής δικτύωσης, προάγοντας την αιμοδοσία.
+		\item Όταν ξεκλειδώνει κάποιο έμβλημα.
+	\end{itemize}
+	
+	Επίσης ο χρήστης έχει την δυνατότητα να προσκαλέσει τους φίλους του στην εφαρμογή. Σε αυτό το σημείο πρέπει να αναφερθεί ότι κάθε φορά που ο χρήστης αλληλεπιδρά μέσω της εφαρμογής με τα μέσα κοινωνικής δικτύωσης κερδίζει πόντους σύμφωνα με το σύστημα πόντων όπως περιγράφηκε στο \ref{sssect:point_system} . Αξιοποιώντας την δύναμη των κοινωνικών δικτύων είμαστε σε θέση να δώσουμε μεγαλύτερη προβολή και κοινωνικό χαρακτήρα στην εθελοντική αιμοδοσία. Μετατρέποντας ουσιαστικά τους εθελοντές αιμοδότες σε πρότυπα της εθελοντικής αιμοδοσίας με στόχο την προσέλκυση νέων εθελοντών αιμοδοτών.
+	\subsection{Ειδοποιήσεις και Υπενθυμίσεις}
